# wasm_voxel_engine

./: .gitignore  CMakeLists.txt  README.md  d  index.data  index.html  index.js  index.wasm  main.cpp  main_old.cpp  run_command.txt
include/: block.h  camera.h  chunk.cpp  chunk.h  chunkmesh.cpp  chunkmesh.h  event_handler.cpp  event_handler.h  shader.cpp  shader.h  terrain.h  view.cpp  view.h  world.cpp  world.h
include/gui_interface/: interface.cpp  interface.h
include/helper/: timer.h
include/physical_world/: block.h  chunk.cpp  chunk.h  chunkmesh.cpp  chunkmesh.h  terrain.h  world.cpp  world.h
include/rendering/: shader.cpp  shader.h  view.cpp  view.h
include/shaders/: fragment_shader.fs  vertex_shader.vs
